make second background variable

--- a/src/components/common/Header/header.module.scss
+++ b/src/components/common/Header/header.module.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   border-radius: 1rem;
-  background: linear-gradient(35deg, $black_dark, $main_color);
+  background: $second_gradient;
   height: 5rem;
   margin-top: $vertical_margin;
   margin-bottom: $vertical_margin;
