--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@ $main_color: #d92e2e;
 $black_light: #494949;
 $black_dark: #313131;
 $default_gradient: linear-gradient(35deg, $black_light, $black_dark);
+$second_gradient: linear-gradient(35deg, $black_dark, $main_color);
 $titles_color: rgb(240, 105, 105);
 $value_color: #fff;
 $white_color: #fff;
