--- a/src/components/search/UserDetails/index.module.scss
+++ b/src/components/search/UserDetails/index.module.scss
@@ -10,7 +10,7 @@
   padding-left: 2rem;
   align-items: center;
   border-radius: 1rem;
-  background: linear-gradient(35deg, $black_dark, $main_color);
+  background: $second_gradient;
   height: 5rem;
   margin-top: $vertical_margin;
   margin-bottom: $vertical_margin;
