--- a/src/components/search/UserDetails/index.module.scss
+++ b/src/components/search/UserDetails/index.module.scss
@@ -21,32 +21,6 @@
     margin-right: 1rem;
   }
 }
-.box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 1rem;
-  text-decoration: none;
-  background: $default_gradient;
-  width: 20rem;
-  height: 10rem;
-
-  div {
-    margin-left: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  h4 {
-    color: white;
-    font-size: 1.8rem;
-  }
-  svg {
-    color: red;
-    font-size: 2.5rem;
-  }
-}
 
 .info {
   display: flex;
@@ -56,9 +30,9 @@
   width: 100%;
   .imageWrapper {
     width: 30%;
-    height: 15rem;
     img {
-      height: 100%;
+      height: auto;
+      width: 100%;
       border-radius: 1rem;
     }
   }
@@ -75,14 +49,16 @@
   margin-left: 2rem;
   margin-bottom: $vertical_margin;
   div.title {
-    h3 {
+    h2 {
       color: $titles_color;
       width: 7rem;
     }
   }
   div.infoValue {
-    h3 {
+    margin-left: 2rem;
+    h2 {
       color: $value_color;
+      word-break: break-all;
     }
   }
 }
@@ -96,29 +72,53 @@
     flex-direction: column;
     justify-content: space-between;
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 2rem 1rem;
     margin-bottom: 1rem;
 
     background: $default_gradient;
     width: 48%;
-    height: 11rem;
+    // height: 11rem;
 
     .item {
       display: flex;
-      align-items: flex-end;
+      align-items: center;
       margin-bottom: 1rem;
-      h4 {
+      margin-left: 0.5rem;
+      h2 {
         margin-left: 1rem;
         color: $value_color;
+        word-break: break-all;
         &.link {
           cursor: pointer;
         }
       }
-
-      svg {
-        color: red;
-        font-size: 1.5rem;
+      .iconWrapper {
+        width: 2rem;
+        svg {
+          color: red;
+          font-size: 1.6rem;
+        }
       }
+    }
+  }
+}
+
+@media (max-width: 601px) {
+  .info {
+    .imageWrapper {
+      width: 40%;
+      img {
+        height: auto;
+        width: 100%;
+        border-radius: 1rem;
+        min-height: 5rem;
+        min-width: 5rem;
+      }
+    }
+    .detailsWrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
   }
 }
