--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -21,3 +21,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media (max-width: 1024px) {
+  body {
+    margin: 0% 5%;
+  }
+}
+@media (max-width: 601px) {
+  body {
+    margin: 0% 2%;
+  }
+}
+
+@media (max-width: 400px) {
+  body {
+    margin: 0% 1%;
+  }
+}
