--- a/src/pages/history/index.module.scss
+++ b/src/pages/history/index.module.scss
@@ -2,8 +2,9 @@
 
 .wrapper {
   display: flex;
+  flex-direction: column;
   padding: 2rem;
-  align-items: center;
+  justify-content: space-between;
   border-radius: 1rem;
   background: $default_gradient;
   margin-top: $vertical_margin;
@@ -21,6 +22,12 @@
         padding-bottom: 1rem;
       }
     }
+  }
+  button {
+    width: 9rem;
+    height: 3rem;
+    margin-top: 2.5rem;
+    border-radius: 0.5rem;
   }
 }
 .search {
